--- a/login.css
+++ b/login.css
@@ -1,5 +1,4 @@
 
-
 * {
     box-sizing: border-box;
     padding: 0;
@@ -7,29 +6,29 @@
 }
 
   .header_bar{
-    background-color: dimgray;
-    height: 40px;
+    background-color: rgb(184, 184, 184);
+    height: 50px;
 }
 
 .logotipo{
-    width: 30px;
-    height: 40px;
-    margin-left: 5px;
-    margin-top: 2px;
-    background-image: url('icon.png');
-    background-color: white;
-    mix-blend-mode: multiply;
+  width: 35px;
+  height: 45px;
+  margin-left: 10px;
+  margin-top: 2px;
+  background-image: url('icon.png');
+  background-color: white;
+  mix-blend-mode: multiply;
 }
 
 .icon{
-    width: 30px;
-    height: 30px;
-    float: right;
-    margin-top: 5px;
-    margin-right: 3px;
-    background-color: url("user.png");
-    border-color: white;
-    mix-blend-mode: multiply;
+  width: 35px;
+  height: 35px;
+  float: right;
+  margin-top: 8px;
+  margin-right: 3px;
+  background-color: url("user.png");
+  border-color: white;
+  mix-blend-mode: multiply;
 
 
 }
@@ -154,8 +153,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
-    background: #ccc;
+    height: 90vh;
+    background: #ffffff;
     background-size: cover;
   }
   .user_options-container {
@@ -173,28 +172,25 @@
   /**
    * * Registered and Unregistered user box and text
    * */
-  .user_options-registered,
+
   .user_options-unregistered {
     width: 50%;
     padding: 75px 45px;
     color: #fff;
     font-weight: 300;
   }
-  
-  .user_registered-title,
+
   .user_unregistered-title {
     margin-bottom: 15px;
     font-size: 1.66rem;
     line-height: 1em;
   }
   
-  .user_unregistered-text,
-  .user_registered-text {
+  .user_unregistered-text{
     font-size: 0.83rem;
     line-height: 1.4em;
   }
   
-  .user_registered-login,
   .user_unregistered-signup {
     margin-top: 30px;
     border: 1px solid #ccc;
@@ -206,7 +202,7 @@
     letter-spacing: 0.2rem;
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   }
-  .user_registered-login:hover,
+
   .user_unregistered-signup:hover {
     color: rgba(34, 34, 34, 0.85);
     background-color: #ccc;
@@ -240,12 +236,12 @@
     color: #e8716d;
     letter-spacing: 0.1rem;
   }
-  .user_options-forms .forms_field:not(:last-of-type) {
+  .user_options-forms {
     margin-bottom: 20px;
   }
   .user_options-forms .forms_field-input {
     width: 100%;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 2px solid #ccc;
     padding: 6px 20px 6px 6px;
     font-family: "Montserrat", sans-serif;
     font-size: 1rem;
@@ -349,7 +345,6 @@
       top: 40px;
     }
   
-    .user_options-registered,
   .user_options-unregistered {
       padding: 50px 45px;
     }
