--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
 }
 .container {
   background-color: rgb(184, 184, 184);
-  margin-top: 10px;
   position: relative;
   height: 50px;
   transition: all 0.5s ease-in-out;
@@ -41,8 +40,8 @@ body {
   transform-origin: right;
   top: 30px;
   right: 80px;
-    position:absolute;
-    height: 40px;
+  position:absolute;
+  height: 40px;
   width: 180px;
   display: flex;
   transform: translateY(-50%);
@@ -50,7 +49,7 @@ body {
 }
 .search {
   border: none;
-    font-size: 16px;
+  font-size: 16px;
   width: 100%;
   height: 30px;
   padding: 8px 48px;
@@ -84,58 +83,20 @@ body {
   border-radius: 100px;
 }
 
-.search-btn:hover {
-  background-color: #e6e6e6;
-}
-
-.container-search-clicked {
-  margin-top: 10px;
-  height: 250px;
-}
-
-.inputgroup-search-clicked {
-  left: 50%;
-  transform: translateX(-50%);
-  width: 50vw;
-  margin-top: -20px;
-}
-.cross-btn {
-  border: none;
-  top: 10px;
-  right: 260px;
-  padding: 10px 14px;
-  position: absolute;
-  background-color: #f5f5f5;
-  cursor: pointer;
-  border-radius: 100px;
-  display: none;
-  transition: all 0.5s ease-in-out;
-}
-.cross {
-  cursor: pointer;
-  width: 12px;
-  height: 12px;
-}
-.cross-btn:hover {
-  background-color: #e6e6e6;
-}
-
 .slider {
-  width: 20%;
+  width: 60%;
   margin: auto;
   overflow: hidden;
 }
 
 .slider ul {
-  padding: 0;
   display: flex;
   width: 400%;
-  animation: slid 10s infinite reverse;
-  animation-timing-function: ease-in;
+  animation: animate 10s linear infinite;
 }
 
 .slider li {
-  width: 50%;
+  width: 100%;
   list-style: none;
 }
 
@@ -143,16 +104,16 @@ body {
   width: 100%;
 }
 
-@keyframes slid {
-  0% {margin-left: 0;}
-  20% {margin-left: 0;}
+@keyframes animate {
+  0% {left: 0;}
+  20% {left: 0;}
   
-  25% {margin-left: -100%;}
-  45% {margin-left: -100%;}
+  25% {left: -100%;}
+  45% {left: -100%;}
   
-  50% {margin-left: -200%;}
-  70% {margin-left: -200%;}
+  50% {left: -200%;}
+  70% {left: -200%;}
   
-  75% {margin-left: -300%;}
-  100% {margin-left: -300%;}
+  75% {left: -300%;}
+  100% {left: -300%;}
 }
