--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 body {
-  width: 100%;
-  height: 100%;
   background-color: #ffffff;
 }
 * {
@@ -8,8 +6,9 @@ body {
   padding: 0;
   margin: 0;
 }
-.container {
+.containertopbar {
   background-color: rgb(184, 184, 184);
+  margin-top: 0px;
   position: relative;
   height: 50px;
   transition: all 0.5s ease-in-out;
@@ -40,8 +39,8 @@ body {
   transform-origin: right;
   top: 30px;
   right: 80px;
-  position:absolute;
-  height: 40px;
+    position:absolute;
+    height: 40px;
   width: 180px;
   display: flex;
   transform: translateY(-50%);
@@ -49,7 +48,7 @@ body {
 }
 .search {
   border: none;
-  font-size: 16px;
+    font-size: 16px;
   width: 100%;
   height: 30px;
   padding: 8px 48px;
@@ -83,37 +82,195 @@ body {
   border-radius: 100px;
 }
 
-.slider {
-  width: 60%;
-  margin: auto;
+.search-btn:hover {
+  background-color: #e6e6e6;
+}
+ 
+
+
+
+.logotipo:hover{
+  width: 65px;
+}
+
+
+
+.inputgroup-search-clicked {
+  left: 50%;
+  transform: translateX(-50%);
+  width: 50vw;
+  margin-top: -20px;
+}
+.cross-btn {
+  border: none;
+  top: 10px;
+  right: 260px;
+  padding: 10px 14px;
+  position: absolute;
+  background-color: #f5f5f5;
+  cursor: pointer;
+  border-radius: 100px;
+  display: none;
+  transition: all 0.5s ease-in-out;
+}
+.cross {
+  cursor: pointer;
+  width: 12px;
+  height: 12px;
+}
+.cross-btn:hover {
+  background-color: #e6e6e6;
+}
+
+section{
+  margin-top: 0px;
+  position: relative;
+  width: 100%;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+section #slider{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+section .navigation{
+  position: absolute;
+  bottom: 10px;
+  height: 150px;
+  width: calc(100%/4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+section .navigation li{
+  display: block;
+  list-style: none;
+  cursor: pointer;
+  margin: 10px;
+}
+
+section .navigation li img{
+  display: block;
+  width: 100%;
+  border: 4px solid #fff;
+  border-radius: 4px;
+}
+
+
+.ItemsDestaque{
+  display: grid;
+  border-radius: 5px;
+  height: 60%;
+  width: 150vh;
+  grid-gap: 20px;
+  grid-template-columns: 25% 25% 25%;
+}
+
+#item1{
+  grid-column: 1;
+}
+
+#item2{
+  grid-column: 2;
+}
+
+#item3{
+  grid-column: 3;
+}
+
+
+.shop-card {
+  width: 350px;
+  background: #f5f5f5;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  border-radius: 5px;
+  padding: 25px;
+  text-align: center;
+  z-index: 2;
+}
+.shop-card figure {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  outline: none !important;
+}
+.shop-card figure img {
+  margin: -95px 0 -60px;
+  width: 100%;
+}
+.shop-card .title {
+  font-weight: 900;
+  text-transform: uppercase;
+  font-size: 30px;
+  color: #23211f;
+  margin-bottom: 5px;
+}
+.shop-card .desc {
+  font-size: 17px;
+  opacity: 0.8;
+  margin-bottom: 3px;
+}
+.shop-card .cta {
+  padding: 20px 20px 5px;
+}
+.shop-card .cta::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.shop-card .price {
+  float: left;
+  color: #FF3100;
+  font-size: 22px;
+  font-weight: 900;
+  padding-top: 2px;
+  transition: color 0.3s ease-in-out;
+  margin-top: 4px;
+}
+.shop-card .btn {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  font-size: 13px;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #FF3100;
+  padding: 12px 18px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  line-height: 0.95;
+  border: none;
+  background: none;
+  outline: none;
+  border: 1px solid #FF3100;
+  border-radius: 20px;
   overflow: hidden;
 }
-
-.slider ul {
-  display: flex;
-  width: 400%;
-  animation: animate 10s linear infinite;
-}
-
-.slider li {
+.shop-card .btn .bg {
   width: 100%;
-  list-style: none;
+  height: 100%;
+  display: block !important;
+  z-index: -1;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  background: linear-gradient(135deg, #a61322, #d33f34);
 }
-
-.slider img {
-  width: 100%;
+.shop-card .btn:hover {
+  color: #fff !important;
+  border: 1px solid transparent !important;
 }
-
-@keyframes animate {
-  0% {left: 0;}
-  20% {left: 0;}
-  
-  25% {left: -100%;}
-  45% {left: -100%;}
-  
-  50% {left: -200%;}
-  70% {left: -200%;}
-  
-  75% {left: -300%;}
-  100% {left: -300%;}
+.shop-card .btn:hover .bg {
+  opacity: 1;
 }
