--- a/Css/style-Main.css
+++ b/Css/style-Main.css
@@ -1,5 +1,6 @@
 body {
   background-color: #ffffff;
+  font-family: "Montserrat", sans-serif;
 }
 * {
     box-sizing: border-box;
@@ -35,23 +36,125 @@ body {
 
 
 }
+
+#cart-icon{
+  font-size: 1.8rem;
+  float: right;
+  margin-top: 12px;
+  margin-right: 30px;
+
+}
+
+.cart{
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 360px;
+  min-height: 100vh;
+  padding: 20px;
+  background:  rgb(184, 184, 184);
+  box-shadow: -2 0 4px hsl(0 4% 15% / 10%);
+  z-index: 950;
+  transition: 0.3s;
+}
+.cart.active{
+  right: 0;
+}
+.cart-title{
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-top: 2rem;
+}
+.cart-box{
+  display: grid;
+  grid-template-columns: 32% 50% 18%;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+.cart-img{
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  padding: 10px;
+}
+.detail-box{
+  display: grid;
+  row-gap: 0.5rem;
+}
+.cart-product-title{
+  font-size: 1.5rem ;
+  text-transform: uppercase;
+}
+.cart-price{
+   font-weight: 500;
+}
+.cart-quantity{
+  border: 1px solid var(--text-color);
+  outline-color: red;
+  width: 2.4rem;
+  text-align: center;
+  font-size: 1rem;
+}
+.cart-remove{
+  font-size: 24px ;
+  color: red;
+  cursor: pointer;
+}
+
+.total{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 1.5rem;
+  border-top: 1px solid var(--text-color);
+}
+
+.total-title{
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.title-price{
+  margin-left: 0.5rem;
+}
+.btn-buy{
+  display: flex;
+  margin: 1.5rem auto 0 auto;
+  padding: 12px 20px;
+  border: none;
+  background:red;
+  color: white;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+.btn-buy:hover{
+  background-color: var(--text-color);
+}
+#close-cart{
+  position: absolute;
+  top: 1rem;
+  right: 0.8rem;
+  font-size: 2rem;
+  color: var(--text-color);
+  cursor: pointer;
+}
+
 .inputgroup {
   transform-origin: right;
   top: 30px;
-  right: 80px;
-    position:absolute;
-    height: 40px;
-  width: 180px;
+  right: 120px;
+  position:absolute;
+  height: 40px;
   display: flex;
   transform: translateY(-50%);
   transition: all 0.5s ease-in-out;
 }
 .search {
   border: none;
-    font-size: 16px;
-  width: 100%;
+  width: 38px;
   height: 30px;
-  padding: 8px 48px;
   background-color: #f5f5f5;
   border-radius: 100px;
   outline: none;
@@ -86,12 +189,6 @@ body {
   background-color: #e6e6e6;
 }
  
-
-
-
-.logotipo:hover{
-  width: 65px;
-}
 
 
 
@@ -130,6 +227,7 @@ section{
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 900;
 }
 
 
@@ -165,16 +263,48 @@ section .navigation li img{
   width: 100%;
   border: 4px solid #fff;
   border-radius: 4px;
+  
+}
+
+
+.message{
+  width: 100%;
+  height: 400px;
+  justify-content: center;
+  background-color: rgb(184, 184, 184) ;
+  align-items: center;
+  margin-top: 30px;
+  }
+
+.containerMessage{
+  text-align: center;
+  padding-top: 30px;
+}
+.part1{
+  margin-top: 60px;
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif; 
+}
+.part2{
+  font-size: 80px ;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif,"bold";
+
+}
+.part3{
+  margin-top: 30px;
+  font-size: 30px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif; 
 }
 
 
 .ItemsDestaque{
   display: grid;
+  justify-content: center;
+  margin-left: 5%;
+  margin-top: 30px;
   border-radius: 5px;
-  height: 60%;
-  width: 150vh;
-  grid-gap: 20px;
-  grid-template-columns: 25% 25% 25%;
+  width: 190vh;
+  grid-template-columns: 25% 25% 25% ;
 }
 
 #item1{
@@ -188,7 +318,6 @@ section .navigation li img{
 #item3{
   grid-column: 3;
 }
-
 
 .shop-card {
   width: 350px;
@@ -239,7 +368,7 @@ section .navigation li img{
   transition: color 0.3s ease-in-out;
   margin-top: 4px;
 }
-.shop-card .btn {
+.shop-card .add-cart {
   position: relative;
   z-index: 1;
   display: inline-block;
@@ -258,7 +387,7 @@ section .navigation li img{
   border-radius: 20px;
   overflow: hidden;
 }
-.shop-card .btn .bg {
+.shop-card .add-cart .bg {
   width: 100%;
   height: 100%;
   display: block !important;
@@ -267,10 +396,73 @@ section .navigation li img{
   transition: all 0.3s ease-in-out;
   background: linear-gradient(135deg, #a61322, #d33f34);
 }
-.shop-card .btn:hover {
+.shop-card .add-cart:hover {
   color: #fff !important;
   border: 1px solid transparent !important;
 }
-.shop-card .btn:hover .bg {
+.shop-card .add-cart:hover .bg {
   opacity: 1;
 }
+
+
+
+
+
+
+.site-footer {
+  margin-top: 30px;
+  background-color: #26272b;
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
+  text-align: center;
+}
+.about{
+  margin-right: 50%;
+}
+.categories{
+  margin-left: 50%px;
+  margin-top: -35px;
+}
+.links{
+  margin-left: 60%;
+  margin-top: -160px;
+  margin-bottom: 50px;
+}
+
+.site-footer hr {
+  border-top-color: #bbb;
+  opacity: 0.5;
+}
+.site-footer hr.small {
+  margin: 20px 0;
+}
+.site-footer h6 {
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
+}
+.site-footer a {
+  color: #737373;
+}
+.site-footer a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+.footer-links {
+  padding-left: 0;
+  list-style: none;
+  margin-left: 20px;
+}
+.footer-links li {
+  display: block;
+}
+.footer-links a {
+  color: #737373;
+}
+
+
+
