--- a/Css/search.css
+++ b/Css/search.css
@@ -53,7 +53,8 @@ body {
     min-height: 100vh;
     padding: 20px;
     background:  rgb(184, 184, 184);
-    box-shadow: -2 0 4px hsl(0 4% 15% / 10%);
+    box-shadow: -2 0 6px hsl(0 4% 15% / 10%);
+    border: #26272b 1px solid;
     z-index: 950;
     transition: 0.3s;
   }
@@ -148,7 +149,7 @@ body {
     left: 35%;
     position:absolute;
     height: 40px;
-    width: 500px;
+    width: 30vw;
     display: flex;
     transform: translateY(-50%);
     transition: all 0.5s ease-in-out;
@@ -184,6 +185,7 @@ body {
     justify-content: center;
     border: none;
     padding: 5px 8px;
+    margin-left: 8px;
     position: absolute;
     background-color: transparent;
     cursor: pointer;
@@ -227,19 +229,23 @@ body {
   .ItemsDestaque{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 1rem;
-    margin-left: 50px;
-    margin-top:50px;
+    gap: 20px;
   }
-  .shop-card {
+  .product-img{
+    cursor: pointer;
+  }
+  .ItemsDestaque .shop-card {
+    display:block;
     width: 350px;
     background: #f5f5f5;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
     overflow: hidden;
     border-radius: 5px;
-    padding: 25px;
+    padding: 25px;  
+    margin-left: 15%;
+    margin-right: 15%;
     text-align: center;
-    z-index: 2;
+    align-self: center;
   }
   .shop-card figure {
     margin: 0;
@@ -370,5 +376,153 @@ body {
     color: #737373;
   }
   
+  .details {
+    width: 830px;
+    height: 950px;
+    background: #f5f5f5;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    border-radius: 5px;
+    padding: 25px;
+    text-align: center;
+    z-index: 40;
+    align-items: center;
+    display: absolute;
+    margin-top: 5vh;
+    margin-left: auto;
+    margin-right: auto;
+    
+    border-radius: 20px;
+    display: none;
+  }
+  
+  .div_img{
+    float: left;
+    width: 300px;
+    height: 300px;
+    margin-right: 10%;
+  }
+  
+  .name_price{
+    float: left;
+  
+  }
+  .name_price .title{
+    margin-bottom: 2vh;
+    font-weight: 900;
+    text-transform: uppercase;
+    font-size: 24px;
+  }
   
   
+  .name_price .price_line{
+    display: flex;
+    margin-top: 5vh;
+  }
+  .name_price .price_line .price{
+  
+    color:#FF3100 ;
+  }
+  
+  
+  .text{
+    display: flex;
+    width: 400px;
+    height: 100px;
+    float: left;
+    margin-top: 5vh;
+    text-align: left;
+  }
+  @media only screen and (min-width: 0vh){
+    .ItemsDestaque{
+      grid-template-columns: 1fr ;
+    }
+    .details{
+      width: 430px;
+      height: 450px;
+    }
+    .stars{
+      display: none;
+    }
+    .name_price .price_line{
+      margin-top: 0vh;
+    }
+    .text{
+      margin-top: 1vh;
+    }
+    .name_price .title{
+      margin-bottom: 1vh;
+  
+    }
+  }
+  
+  
+  @media only screen and (min-width: 100vh){
+    .ItemsDestaque{
+      grid-template-columns: 1fr 1fr ;
+    }
+    .details{
+      width: 830px;
+      height: 350px;
+    }
+    .stars{
+      display: none;
+    }
+    .name_price .price_line{
+      margin-top: 0vh;
+    }
+    .text{
+      margin-top: 1vh;
+    }
+    .name_price .title{
+      margin-bottom: 1vh;
+  
+    }
+    
+  }
+  @media only screen and (min-width: 140vh){
+    .ItemsDestaque{
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+    .details{
+      height: 50vh;
+    }
+    
+    .stars{
+      display: inline;
+    }
+    .name_price .price_line{
+      display: flex;
+      margin-top: 5vh;
+    }
+    .text{
+      margin-top: 5vh;
+    }
+    .name_price .title{
+      margin-bottom: 5vh;
+  
+    }
+  }
+  
+  @media only screen and (min-width: 160vh){
+    .ItemsDestaque{
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    .details{
+      height: 40vh;
+    }
+    .stars{
+      display: inline;
+    }
+    .name_price .price_line{
+      display: flex;
+      margin-top: 5vh;
+    }
+    .text{
+      margin-top: 5vh;
+    }
+    .name_price .title{
+      margin-bottom: 5vh;
+  
+    }
+  }
