--- a/Css/style-Main.css
+++ b/Css/style-Main.css
@@ -3,9 +3,13 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+#hover{
+  background-color: black;
+  opacity: 30%;
 }
 .containertopbar {
   background-color: rgb(184, 184, 184);
@@ -56,6 +60,8 @@ body {
   box-shadow: -2 0 4px hsl(0 4% 15% / 10%);
   z-index: 950;
   transition: 0.3s;
+  border-left: 0.5px solid;
+  border-radius: 1px;
 }
 .cart.active{
   right: 0;
@@ -172,13 +178,12 @@ body {
 }
 
 .search-btn {
-  top: 2px;
-  left: 2px;
   display: flex;
   align-items: center;
   justify-content: center;
   border: none;
-  padding: 5px 8px;
+  padding: 7px 8px;
+  margin-left: 2px;
   position: absolute;
   background-color: transparent;
   cursor: pointer;
@@ -244,8 +249,8 @@ section #slider{
 section .navigation{
   position: absolute;
   bottom: 10px;
-  height: 150px;
-  width: calc(100%/4);
+  height: 10vh;
+  width: calc(100vh/2);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -299,26 +304,15 @@ section .navigation li img{
 
 .ItemsDestaque{
   display: grid;
-  justify-content: center;
-  margin-left: 5%;
-  margin-top: 30px;
-  border-radius: 5px;
-  width: 190vh;
-  grid-template-columns: 25% 25% 25% ;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    align-content: center;
+    gap: 1rem;
+    margin-left: 50px;
+    margin-top:50px;
 }
-
-#item1{
-  grid-column: 1;
+.product-img{
+  cursor: pointer;
 }
-
-#item2{
-  grid-column: 2;
-}
-
-#item3{
-  grid-column: 3;
-}
-
 .shop-card {
   width: 350px;
   background: #f5f5f5;
@@ -328,6 +322,7 @@ section .navigation li img{
   padding: 25px;
   text-align: center;
   z-index: 2;
+  margin: auto;
 }
 .shop-card figure {
   margin: 0;
@@ -404,6 +399,153 @@ section .navigation li img{
   opacity: 1;
 }
 
+.details {
+  width: 830px;
+  height: 950px;
+  background: #f5f5f5;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  border-radius: 5px;
+  padding: 25px;
+  text-align: center;
+  z-index: 40;
+  align-items: center;
+  display: absolute;
+  margin-top: 5vh;
+  margin-left: auto;
+  margin-right: auto;
+  
+  border-radius: 20px;
+  display: none;
+}
+
+.div_img{
+  float: left;
+  width: 300px;
+  height: 300px;
+  margin-right: 10%;
+}
+
+.name_price{
+  float: left;
+
+}
+.name_price .title{
+  margin-bottom: 2vh;
+  font-weight: 900;
+  text-transform: uppercase;
+  font-size: 24px;
+}
+
+
+.name_price .price_line{
+  display: flex;
+  margin-top: 5vh;
+}
+.name_price .price_line .price{
+
+  color:#FF3100 ;
+}
+
+
+.text{
+  display: flex;
+  width: 400px;
+  height: 100px;
+  float: left;
+  margin-top: 5vh;
+  text-align: left;
+}
+
+.review-form{
+  justify-content: center;
+  margin-left: 40%;
+  margin-top: 10vh;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  width: 50vh;
+  height:35vh;
+  border-radius: 20px;
+  padding: 2vh;
+}
+
+.review-form .review_title{
+  font-weight: 900;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+
+.star-select {
+  display: inline-block;
+  float: left;
+  height: 3em;
+  line-height: 3em;
+  vertical-align: middle;
+}
+
+
+.star-select__input {
+  display: none;
+}
+
+.star-select__star {
+  cursor: pointer;
+  display: inline-block;
+  height: 3em;
+  overflow: hidden;
+  float: right;
+}
+.star-select__star:before {
+  font-size: 1.9em;
+  content: "☆";
+  color: #343434;
+  -webkit-transition: color 0.5s;
+  -moz-transition: color 0.5s;
+  transition: color 0.5s;
+}
+
+
+input:checked ~ .star-select__star:before {
+  content: "★";
+  color: gold;
+}
+
+.review-form textarea {
+  display: block;
+  clear: both;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+  border-radius: 5px;
+  width: 100%;
+  font-family: "Montserrat", sans-serif;;
+}
+#id_content{
+  resize: none;
+}
+.divButton{
+  width: 100%;
+  height: 5vh;
+}
+.divButton .Button_Comment{
+  background-color: red;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin-top: 10px;
+  cursor: pointer;
+  align-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
+
+
+
 
 
 
@@ -464,5 +606,96 @@ section .navigation li img{
   color: #737373;
 }
 
+@media only screen and (min-width: 0vh){
+  .ItemsDestaque{
+    grid-template-columns: 1fr ;
+  }
+  .details{
+    width: 430px;
+    height: 450px;
+  }
+  .stars{
+    display: none;
+  }
+  .name_price .price_line{
+    margin-top: 0vh;
+  }
+  .text{
+    margin-top: 1vh;
+  }
+  .name_price .title{
+    margin-bottom: 1vh;
+
+  }
+}
 
 
+@media only screen and (min-width: 100vh){
+  .ItemsDestaque{
+    grid-template-columns: 1fr 1fr ;
+  }
+  .details{
+    width: 830px;
+    height: 350px;
+  }
+  .stars{
+    display: none;
+  }
+  .name_price .price_line{
+    margin-top: 0vh;
+  }
+  .text{
+    margin-top: 1vh;
+  }
+  .name_price .title{
+    margin-bottom: 1vh;
+
+  }
+  
+}
+@media only screen and (min-width: 140vh){
+  .ItemsDestaque{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .details{
+    height: 50vh;
+  }
+  
+  .stars{
+    display: inline;
+  }
+  .name_price .price_line{
+    display: flex;
+    margin-top: 5vh;
+  }
+  .text{
+    margin-top: 5vh;
+  }
+  .name_price .title{
+    margin-bottom: 5vh;
+
+  }
+}
+
+@media only screen and (min-width: 160vh){
+  .ItemsDestaque{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .details{
+    height: 40vh;
+  }
+  .stars{
+    display: inline;
+  }
+  .name_price .price_line{
+    display: flex;
+    margin-top: 5vh;
+  }
+  .text{
+    margin-top: 5vh;
+  }
+  .name_price .title{
+    margin-bottom: 5vh;
+
+  }
+}
