--- a/Css/gestao.css
+++ b/Css/gestao.css
@@ -386,7 +386,7 @@ button {
 
 .users_recentes{
   width: 100%;
-  height: 10vh;
+  height: 100px;
   border-radius: 20px 0 0 20px;
   display: flex;
   border: 1px solid black;
